--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - ./account/target/account-1.0.0-fat.jar:/var/app.jar:z
 #    # run the application with the provider configuration json
 #    command: java -jar /var/app.jar -conf /var/config.json -cluster
-    command: java -Djava.net.preferIPv4Stack=true -jar /var/app.jar -cluster
+    command: java -Djava.net.preferIPv4Stack=true -Djgroups.tcp.address=NON_LOOPBACK -jar /var/app.jar -cluster
     environment:
       DBHOST: hsqldb-account:9001
       DBNAME: account
@@ -61,7 +61,7 @@ services:
       - ./transaction/target/transaction-1.0.0-fat.jar:/var/app.jar:z
 #    # run the application with the provider configuration json
 #    command: java -jar /var/app.jar -conf /var/config.json -cluster
-    command: java -Djava.net.preferIPv4Stack=true -jar /var/app.jar -cluster
+    command: java -Djava.net.preferIPv4Stack=true -Djgroups.tcp.address=NON_LOOPBACK -jar /var/app.jar -cluster
     environment:
       DBHOST: hsqldb-transaction:9001
       DBNAME: transaction
@@ -77,7 +77,7 @@ services:
     image: java:alpine
     volumes:
       - ./web/target/web-1.0.0-fat.jar:/var/app.jar:z
-    command: java -Djava.net.preferIPv4Stack=true -jar /var/app.jar -cluster
+    command: java -Djava.net.preferIPv4Stack=true -Djgroups.tcp.address=NON_LOOPBACK -jar /var/app.jar -cluster
     ports:
       - 80:8080
     environment:
